sidebar related changes

--- a/src/globals/layout/sider/SideBar.less
+++ b/src/globals/layout/sider/SideBar.less
@@ -1,4 +1,4 @@
-// @import "../../../utils/styles/mixins.less";
+/* // @import "../../../utils/styles/mixins.less";
 // @import "../../../utils/styles/variables.less";
 .side-bar-drawer {
   .ant-drawer-header-no-title {
@@ -299,3 +299,4 @@ ul.main-layout-menu {
   opacity: 1;
   transition: opacity 0.3s @ease-in-out, width 0.3s @ease-in-out;
 }
+ */
